--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
     text-align: center;
 }
 
@@ -40,4 +40,4 @@
         margin: 0 auto;
         max-width: 500px;
     }
-}
+} */
