--- a/src/components/myformStyle.css
+++ b/src/components/myformStyle.css
@@ -1,4 +1,4 @@
-.myformstyle{
+/* .myformstyle{
     border-style: solid;
 
   border-color: black;
@@ -31,3 +31,58 @@ margin-right: 0px;
     margin-right: auto;
 }
 
+body>header{
+  height: 10vh;
+}
+body>section{
+  height: 562.5px;
+}
+.navbar{
+  background: linear-gradient(45deg,#87adfe,#ff77cd);
+  box-shadow: -1px 3px 18px #ff77cd;
+}
+
+.inputSection{
+  display: flex;
+  height: 50vh;
+}
+
+.inputSection>section{
+  flex-grow: 1;
+  padding: 16px;
+}
+
+.btn{
+  margin: 10px;
+  color: #fff;
+  background: linear-gradient(45deg,#87adfe,#ff77cd);
+  box-shadow: 3px 8px 22px rgba(94,28,68,0.15);
+  border: none;
+}
+.input-group{
+  padding: 10px;
+}
+
+.input-group-prepend>span{
+  width: 150px;
+}
+
+.tblSection{
+  padding: 15px;
+}
+.inputSection>section:nth-child(1)>div{
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  color: #495057;
+}
+
+.inputSection>section:nth-child(1)>h4{
+  color: gray;
+}
+
+tr:hover{
+  background-color: #E9ECEF;
+  color: black;
+}
+ */
